# MySQL_languages_connexions

./: .gitignore  ReadMe.md  docker-compose.yml
ressources/: BDD_python.sql  BDD_test.sql
src/c++/: CMakeLists.txt  exec.bash  main.cpp
src/python/: create_database.py  create_table.py  insert.py  main.py
